--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookstore",
+  "name": "spacehub",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -17,7 +17,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
