--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "bookstore",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.17.3"
-  },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
@@ -24,9 +21,11 @@
     "stylelint-scss": "^3.21.0"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -38,12 +37,15 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --ignore-engines",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
