--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -17,6 +17,7 @@
         "**/reset*.css",
         "**/bootstrap*.css",
         "**/*.js",
-        "**/*.jsx"
+        "**/*.jsx",
+        "coverage/**"
     ]
 }
