--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "spacehub",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "14.17.3"
-  },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.17.7",
     "@babel/preset-react": "^7.16.7",
@@ -24,7 +21,9 @@
     "stylelint-scss": "^3.21.0"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@testing-library/jest-dom": "^5.16.3",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
